--- a/README.Rmd
+++ b/README.Rmd
@@ -11,10 +11,10 @@ knitr::opts_chunk$set(
   fig.path = "README-"
 )
 # Please put your title here to include it in the file below.
-Title <- "Title of your paper goes here"
+Title <- "The Legacy of the European Postgraduate Master in Urbanism at TU Delft: A Text Mining Approach"
 ```
 
-# minTEMU
+# minTEMU - The Legacy of the European Postgraduate Master in Urbanism at TU Delft: A Text Mining Approach
 
 [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/UD3-Lab/minTEMU/master?urlpath=rstudio)
 
