--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -1,15 +1,24 @@
-@Article{Marwick2017,
- author="Marwick, Ben",
- title="Computational Reproducibility in Archaeological Research: Basic Principles and a Case Study of Their Implementation",
- journal="Journal of Archaeological Method and Theory",
- year="2017",
- month="Jun",
- day="01",
- volume="24",
- number="2",
- pages="424--450",
- abstract="The use of computers and complex software is pervasive in archaeology, yet their role in the analytical pipeline is rarely exposed for other researchers to inspect or reuse. This limits the progress of archaeology because researchers cannot easily reproduce each other's work to verify or extend it. Four general principles of reproducible research that have emerged in other fields are presented. An archaeological case study is described that shows how each principle can be implemented using freely available software. The costs and benefits of implementing reproducible research are assessed. The primary benefit, of sharing data in particular, is increased impact via an increased number of citations. The primary cost is the additional time required to enhance reproducibility, although the exact amount is difficult to quantify.",
- issn="1573-7764",
- doi="10.1007/s10816-015-9272-9",
- url="https://doi.org/10.1007/s10816-015-9272-9"
+@book{hvitfeldt2021a,
+  title = {Supervised {{Machine Learning}} for {{Text Analysis}} in {{R}}},
+  author = {Hvitfeldt, Emil and Silge, Julia},
+  year = {2021},
+  month = oct,
+  edition = {1st edition},
+  publisher = {{Chapman and Hall/CRC}},
+  address = {{Boca Raton}},
+  isbn = {978-0-367-55419-4},
+  langid = {english}
+}
+
+@book{silge2017a,
+  title = {Text {{Mining}} with {{R}}: {{A Tidy Approach}}},
+  shorttitle = {Text {{Mining}} with {{R}}},
+  author = {Silge, Julia and Robinson, David},
+  year = {2017},
+  month = jul,
+  edition = {1st edition},
+  publisher = {{O'Reilly Media}},
+  address = {{Beijing ; Boston}},
+  isbn = {978-1-4919-8165-8},
+  langid = {english}
 }
