--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -52,6 +52,7 @@ highlights: |
   These are the highlights. 
 ---
 
+
 <!-- This is the format for text comments that will be ignored during renderings. Do not put R code in these comments because it will not be ignored. -->
 
 <!-- With the following code you can access and display values from the yml header above. -->
@@ -61,6 +62,13 @@ Keywords: `r rmarkdown::metadata$keywords`
 Highlights: `r rmarkdown::metadata$highlights`
 
 <!-- The actual document text starts here: -->
+
+```{r}
+#| label: setup
+library(minTEMU)
+
+```
+
 
 # Introduction
 
