--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -79,6 +79,19 @@ pdf_paths<- here::here("analysis","data", "raw_data", emu_theses$pdf_filename)
 
 emu_theses$text <- convert_pdf_text(pdf_paths)
 
+# clean text
+  emu_theses$text_clean <- emu_theses$text %>%
+    str_replace_all("\\s", " ") %>%  ### remove all carriage return and newline characters
+    str_squish() %>%
+    str_replace_all("- ", "") %>%       ### remove all hyphens
+    str_replace_all("[0-9]", "") %>%    ### remove all numbers
+    str_replace_all(emu_theses$author_firstname[i], "") %>%   ### remove author first name
+    str_replace_all(emu_theses$author_surname[i], "") %>%     ### remove author surname
+    str_replace_all(emu_theses$title[i], "") %>%              ### remove title
+    # str_replace_all("Claudiu Forgaci", "") %>%
+    # str_replace_all("Bucharest: Between North and South", "") %>%
+    str_replace_all("EMU", "")          ### remove common words
+
 ```
 
 
