--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -67,6 +67,7 @@ Highlights: `r rmarkdown::metadata$highlights`
 #| label: setup
 library(dplyr)
 library(readr)
+library(stringr)
 devtools::load_all(".")
 
 
@@ -85,9 +86,9 @@ emu_theses$text <- convert_pdf_text(pdf_paths)
     str_squish() %>%
     str_replace_all("- ", "") %>%       ### remove all hyphens
     str_replace_all("[0-9]", "") %>%    ### remove all numbers
-    str_replace_all(emu_theses$author_firstname[i], "") %>%   ### remove author first name
-    str_replace_all(emu_theses$author_surname[i], "") %>%     ### remove author surname
-    str_replace_all(emu_theses$title[i], "") %>%              ### remove title
+    str_replace_all(emu_theses$author_firstname, "") %>%   ### remove author first name
+    str_replace_all(emu_theses$author_surname, "") %>%     ### remove author surname
+    str_replace_all(emu_theses$title, "") %>%              ### remove title
     # str_replace_all("Claudiu Forgaci", "") %>%
     # str_replace_all("Bucharest: Between North and South", "") %>%
     str_replace_all("EMU", "")          ### remove common words
