--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -53,27 +53,41 @@ Highlights: `r rmarkdown::metadata$highlights`
 #| label: setup
 
 # Load packages ----
+## Package for managing paths
 library(here)
-library(dplyr)
-library(readr)
-library(stringr)
+
+## Metapackage for data science
+library(tidyverse)
+
+## Packages for text processing and analysis
 library(tidytext)
-library(pluralize)
+library(SnowballC)
 library(tm)
+
+# Load analysis functions ----
 devtools::load_all(".")
 
 # Read thesis metadata ----
-emu_theses <- read_csv(here::here("analysis","data", "raw_data", "theses-metadata.csv")) %>%
-  mutate(text = "")
+data_path <- here("analysis", "data", "raw_data")
+pdf_names <- dir(path, pattern = "*.pdf")
 
-pdf_names <- dir(here::here("analysis", "data", "raw_data"), pattern = "*.pdf")
-
-emu_theses <- emu_theses %>%
-  filter(file_name %in% pdf_names)
+emu_theses <- 
+  read_csv(here(data_path, "theses-metadata.csv")) %>%
+  mutate(text = "") %>%
+  filter(!is.na(pdf_via))
   
-pdf_paths <- here::here("analysis","data", "raw_data", emu_theses$file_name)
+pdf_paths <- here(data_path, emu_theses$file_name)
+```
 
-emu_theses$text <- convert_pdf_text(pdf_paths)
+
+```{r}
+#| label: extract-pdf-text
+emu_theses$text <- convert_pdf_text(pdf_paths).
+```
+
+
+```{r}
+#| label: clean-text
 
 # clean text 
 emu_theses$text_clean <- emu_theses$text %>%
@@ -125,17 +139,31 @@ ggplot() +
   )
 ```
 
+Word-level tokenisation was applied with the `unnest_tokens()` function of the 
+`tidytext` package. This was preferred over other tokenisers as it produced 
+results that work seamlessly with other `tidyverse` tools.
+
 Stop words:
-- Custom stop words from titles and author names should only be removed from corresponding theses;
-- Words that are commonly used to structure a theses, such as "preface", "contents", and "introduction", were added as custom stop words;
-- All theses were written in English; for common English stop words the "snowball" lexicon was used.
+- Three types of stop words: global, subject-specific and document stop words.
+- Global stop words:
+  - All theses were written in English, so for common English stop words the "snowball" lexicon was used
+  - Optionally, try creating a custom stop word list on the entire corpus, by removing high-frequency words, starting with 20 words and increasing by 10 until reaching words that are not appropriate as stop words
+- Subject-specific stop words:
+  - Manually constructed list, needs domain knowledge
+  - Words that are commonly used to structure a theses, such as "preface", "contents", and "introduction", were added as custom stop words
+- Document stop words:
+  - Stop words from titles and author names should only be removed from corresponding theses
+  
 
 ```{r}
+#| label: stop-words
+
 stop_words_custom <- emu_theses %>% 
   unnest_tokens(output = word, input = title) %>%   ### add words from the title
   select(word) %>% 
-  rbind(., data.frame(word = c("preface", "foreword", "introduction", "conclusion", "thesis"))) %>% 
-  rbind(., data.frame(word = c("city", "urban", "urbanism"))) %>% 
+  rbind(., data.frame(word = c("preface", "foreword", "introduction", "conclusion", "thesis", 
+                               "source", "author"))) %>% 
+  # rbind(., data.frame(word = c("city", "urban", "urbanism"))) %>% 
   rbind(., data.frame(word = c("hab", "km")))
 
 emu_theses_words <- emu_theses %>%
@@ -146,22 +174,43 @@ emu_theses_words <- emu_theses %>%
   anti_join(stop_words_custom, by = "word")
 ```
 
+Stemming is a pre-processing step that needs to be carefully thought through, as 
+it might either degrade topic modeling or produce no meaningful results [@hvitfeldt2021a].
+
+```{r}
+#| label: stemming
+
+emu_theses_words %>% 
+  mutate(stem = wordStem(words = word, 
+                         language = "porter")) %>%  # Implement the Porter stemming algorithm for English provided by the SnowballC package
+  count(stem, sort = TRUE)
+```
 
 
 ```{r}
-# find the most frequently used words
-emu_theses_top <- emu_theses_words %>%
+# Which are the top 20 most frequently used words in each thesis?
+emu_theses_top_20 <- emu_theses_words %>%
   group_by(title) %>%
   count(word, sort = TRUE) %>%
   slice_max(n, n = 20) %>%        ### top_n is superseded; better use slice_max instead
-  filter(n > 50) %>%              ### filter words with a minimum count
+  # filter(n > 50) %>%              ### filter words with a minimum count
   ungroup() %>% 
   mutate(word = reorder(word, n))
 
-emu_theses_top[emu_theses_top$word == "ring",]
+# Which are first 5 most frequently used words in each thesis?
+emu_theses_first_5 <- emu_theses_words %>%
+  count(title, word) %>% 
+  group_by(title) %>% 
+  arrange(desc(n)) %>% 
+  slice(1:5)
 
-emu_theses_top %>%
-  ggplot(aes(x = word, y = n, fill = title)) +
+# Which theses contain "fabric" in the top 20 most frequently used words?
+emu_theses_top_20 %>% 
+  filter(word == "fabric")
+
+emu_theses_top_20 %>%
+  slice(1:40) %>% 
+  ggplot(aes(x = reorder(word, n), y = n, fill = title)) +
   geom_col() +
   xlab(NULL) +
   coord_flip() +
