--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -51,25 +51,35 @@ Highlights: `r rmarkdown::metadata$highlights`
 
 ```{r}
 #| label: setup
+#| echo: false
+#| warning: false
 
 # Load packages ----
-## Package for managing paths
+## Managing paths
 library(here)
 
-## Metapackage for data science
+## Data manipulation and visualisation
 library(tidyverse)
 
-## Packages for text processing and analysis
+## Text processing and analysis
 library(tidytext)
 library(SnowballC)
 library(tm)
+
+## Working with spatial data
+library(tidygeocoder)
 
 # Load analysis functions ----
 devtools::load_all(".")
 
 # Read thesis metadata ----
+## All theses
+theses_all <-
+  readxl::read_xlsx(path = here("analysis", "data", "raw_data", "theses-all.xlsx"))
+
+## Theses with PDF available
 data_path <- here("analysis", "data", "raw_data")
-pdf_names <- dir(path, pattern = "*.pdf")
+pdf_names <- dir(data_path, pattern = "*.pdf")
 
 emu_theses <- 
   read_csv(here(data_path, "theses-metadata.csv")) %>%
@@ -79,21 +89,21 @@ emu_theses <-
 pdf_paths <- here(data_path, emu_theses$file_name)
 ```
 
-
 ```{r}
 #| label: extract-pdf-text
-emu_theses$text <- convert_pdf_text(pdf_paths).
+#| echo: false
+emu_theses$text <- convert_pdf_text(pdf_paths)
 ```
-
 
 ```{r}
 #| label: clean-text
+#| echo: false
 
 # clean text 
 emu_theses$text_clean <- emu_theses$text %>%
   str_replace_all("\\s", " ") %>%  ### remove all carriage return and newline characters
-  str_replace_all("- ", "") %>%       ### remove all hyphens
-  str_replace_all("[0-9]", "") %>%    ### remove all numbers
+  # str_replace_all("- ", "") %>%       ### remove all hyphens
+  # str_replace_all("[0-9]", "") %>%    ### remove all numbers
   str_replace_all(emu_theses$first_name, "") %>%   ### remove author first name
   str_replace_all(emu_theses$last_name, "") %>%     ### remove author surname
   str_replace_all(emu_theses$title, "") %>%              ### remove title
@@ -101,49 +111,72 @@ emu_theses$text_clean <- emu_theses$text %>%
   str_squish()
 ```
 
+```{r}
+#| label: preview
+#| include: false
+
+# Preview theses
+emu_theses %>% 
+  arrange(graduation_year) %>% 
+  pull(text_clean) %>% 
+  str_sub(1, 500)
+
+# Preview theses
+hist(str_length(emu_theses$text_clean))
+
+Encoding(emu_theses$text_clean)
+```
+
 # Introduction
 
-The research presented in this paper was prompted by the closure of the European post-Master of Urbanism (EMU) of the Department of Urbanism at the Faculty of Architecture and the Built Environment, TU Delft. 
+The research presented in this paper was prompted by the closure of the European post-Master of Urbanism (EMU) of the Department of Urbanism at the Faculty of Architecture and the Built Environment, TU Delft. The EMU was an advanced master ran jointly by TU Delft, KU Leuven, UPC Barcelona and Università IUAV di Venezia. 
 <!-- Complete paragraph about the program -->
 
-In order to describe the legacy of the EMU program, including the distinctive features of the didactics employed in it, this paper aims to reveal the main topics taught in it and how those topics had evolved through the years of the program. To that end, we employed a text mining approach in which we analysed its output: 97 theses of 100+ pages each produced over the years for the entire duration of the program between 2007-2021.
+In order to describe the legacy of the EMU program, including the distinctive features of its didactic approach, this paper aims to reveal the main topics taught in it and how those topics had evolved through the years of the program. To that end, we employed a text mining approach in which we analysed its output: `r nrow(theses_all)` theses with an average of `r mean(str_length(emu_theses$text_clean), na.rm = TRUE)` words produced over the years for the duration of the program between `r paste0(min(theses_all$grad_year, na.rm = TRUE), "-", max(theses_all$grad_year, na.rm = TRUE))`. The first year of the program was not represented, as PDF files were only available from 2008 onward.
 
 # Methods
 
 ## Data collection
 The theses are available in PDF format with complex layouts typical to an urbanism project in which text and various types of graphics are combined. 
 
-## Data analysis
-
-[@silge2017a]
-[@hvitfeldt2021a]
-
-# Results
+A total number of `r nrow(emu_theses)` were analysed.
 
 ```{r}
-#| label: map-theses
+#| label: fig-map-theses
 #| warning: false 
+#| echo: false
+#| fig-cap: "Location of EMU theses included in the analysis"
 
-# Create dummy data
-location_names <- as.data.frame(c("Paris, France", "Bucharest, Romania", "Delft, The Netherlands"))
+# Geocode thesis locations
+emu_theses <- emu_theses %>%
+  geocode(location, method = 'osm', lat = latitude , long = longitude)
 
-# Geocode
-
-# Visualise thesis locations on world map
+# Show thesis locations on world map
 world <- map_data("world")
 ggplot() +
   geom_map(
     data = world, map = world,
     aes(long, lat, map_id = region),
     color = "black", fill = "lightgray", size = 0.1
-  )
+  ) +
+  geom_point(data = emu_theses, aes(longitude, latitude), color = "red") +
+  coord_fixed() +
+  theme_void()
 ```
 
+Figure @fig-map-theses shows the geographic spread of the theses included in the analysis.
+
+## Data analysis
+
+[@silge2017a]
+[@hvitfeldt2021a]
+
+### Tokenisation
 Word-level tokenisation was applied with the `unnest_tokens()` function of the 
 `tidytext` package. This was preferred over other tokenisers as it produced 
 results that work seamlessly with other `tidyverse` tools.
 
-Stop words:
+### Stop words
 - Three types of stop words: global, subject-specific and document stop words.
 - Global stop words:
   - All theses were written in English, so for common English stop words the "snowball" lexicon was used
@@ -154,7 +187,6 @@ Stop words:
 - Document stop words:
   - Stop words from titles and author names should only be removed from corresponding theses
   
-
 ```{r}
 #| label: stop-words
 
@@ -186,6 +218,7 @@ emu_theses_words %>%
   count(stem, sort = TRUE)
 ```
 
+# Results
 
 ```{r}
 # Which are the top 20 most frequently used words in each thesis?
@@ -282,42 +315,6 @@ emu_thesis_bigrams_top <- emu_theses_bigrams %>%
   mutate(bigram = reorder(bigram, n)) %>% 
   print()
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Here's some example analysis code: -->
-
-```{r}
-#| label: get-data
-#| eval: false
-# Note the path that we need to use to access our data files when rendering this document
-my_data <- read.csv(here::here('analysis/data/raw_data/my_csv_file.csv'))
-```
-
-```{r}
-#| label: fig-demo-plot
-#| fig-cap: "A plot of random numbers"
-plot(rnorm(10))
-```
-
-Figure @fig-demo-plot shows how we can have a caption and cross-reference for a plot. Note that figure label and cross-references must both be prefixed with `fig-`
-
-```{r}
-#| label: demo-inline-code
-#| echo: false
-x <- round(pi, 2)
-```
-
-Here is an example of inline code `r x` in the middle of a sentence.
 
 # Discussion
 
