--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -87,15 +87,25 @@ emu_theses$text_clean <- emu_theses$text %>%
 
 # Introduction
 
-The research presented in this paper was prompted by the closure of the European post-Master of Urbanism (EMU) of the Department of Urbanism at the Faculty of Architecture and the Built Environment, TU Delft. 
-<!-- Complete paragraph about the program -->
+The research presented in this paper was prompted by the closure of the European post-Master of Urbanism (EMU) of the Department of Urbanism at the Faculty of Architecture and the Built Environment, TU Delft. The EMU was an advanced master ran jointly by TU Delft, KU Leuven, UPC Barcelona and Università IUAV di Venezia. <!-- Complete paragraph about the program -->
 
 In order to describe the legacy of the EMU program, including the distinctive features of the didactics employed in it, this paper aims to reveal the main topics taught in it and how those topics had evolved through the years of the program. To that end, we employed a text mining approach in which we analysed its output: 97 theses of 100+ pages each produced over the years for the entire duration of the program between 2007-2021.
 
 # Methods
 
+Research questions:
+
+-   What were the main topics addressed in the EMU program?
+
+-   How did those topics evolve throughout the duration of the program between 2007-2021?
+
+-   To what extent were the topics and evolution thereof influenced by the assignments given to the students throughout their studies leading up to their thesis?
+
+-   To what extent were the topics and evolution thereof influenced by the exchange semester followed by the students?
+
 ## Data collection
-The theses are available in PDF format with complex layouts typical to an urbanism project in which text and various types of graphics are combined. 
+
+The theses are available in PDF format with complex layouts typical to an urbanism project in which text and various types of graphics are combined.
 
 ## Data analysis
 
@@ -126,12 +136,32 @@ ggplot() +
 
 <!-- Here's some example analysis code: -->
 
+[@silge2017a] [@hvitfeldt2021a]
+
+### Tokenisation
+
+Word-level tokenisation was applied with the `unnest_tokens()` function of the `tidytext` package. This was preferred over other tokenisers as it produced results that work seamlessly with other `tidyverse` tools.
+
+### Stop words
+
+-   Three types of stop words: global, subject-specific and document stop words.
+-   Global stop words:
+    -   All theses were written in English, so for common English stop words the "snowball" lexicon was used
+    -   Optionally, try creating a custom stop word list on the entire corpus, by removing high-frequency words, starting with 20 words and increasing by 10 until reaching words that are not appropriate as stop words
+-   Subject-specific stop words:
+    -   Manually constructed list, needs domain knowledge
+    -   Words that are commonly used to structure a theses, such as "preface", "contents", and "introduction", were added as custom stop words
+-   Document stop words:
+    -   Stop words from titles and author names should only be removed from corresponding theses
+
 ```{r}
 #| label: get-data
 #| eval: false
 # Note the path that we need to use to access our data files when rendering this document
 my_data <- read.csv(here::here('analysis/data/raw_data/my_csv_file.csv'))
 ```
+
+Stemming is a pre-processing step that needs to be carefully thought through, as it might either degrade topic modeling or produce no meaningful results [@hvitfeldt2021a].
 
 ```{r}
 #| label: fig-demo-plot
