--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -55,21 +55,21 @@ Highlights: `r rmarkdown::metadata$highlights`
 #| warning: false
 
 # Load packages ----
-## Managing paths
-library(here)
+## List packages to be loaded
+packages <- c(
+  "here",                         # Managing paths
+  "tidyverse",                    # Data manipulation and visualisation
+  "tidytext", "SnowballC", "tm",  # Text processing and analysis
+  "tidygeocoder"                  # Working with spatial data
+)
 
-## Data manipulation and visualisation
-library(tidyverse)
-
-
-## Text processing and analysis
-library(tidytext)
-library(SnowballC)
-library(tm)
-
-
-## Working with spatial data
-library(tidygeocoder)
+## Load required packages, install them if needed
+for (package in packages) {
+  if (!require(package, character.only = TRUE)) {
+    install.packages(package)
+  }
+  library(package, character.only = TRUE)
+}
 
 # Load analysis functions ----
 devtools::load_all(".")
