--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -233,23 +233,30 @@ emu_theses_words %>%
 
 # Results
 
+Counting frequencies of words per document
 ```{r}
-# Which are the top 20 most frequently used words in each thesis?
-emu_theses_top_20 <- emu_theses_words %>%
-  group_by(title) %>%
-  count(word, sort = TRUE) %>%
-  slice_max(n, n = 20) %>%        ### top_n is superseded; better use slice_max instead
-  # filter(n > 50) %>%              ### filter words with a minimum count
-  ungroup() %>% 
-  mutate(word = reorder(word, n))
+# Which are the top n most frequently used words in each thesis?
+top_n_word_count_per_document(data = emu_theses_words, 
+                              top_n = 3, 
+                              title_col = 'title', 
+                              word_col = 'word')
+```
 
+```{r}
+# Which are the top n most frequently used words in all theses`?
+top_n_word_count_per_corpus(emu_theses_words, 5, "word")
+```
+
+```{r}
 # Which are first 5 most frequently used words in each thesis?
 emu_theses_first_5 <- emu_theses_words %>%
   count(title, word) %>% 
   group_by(title) %>% 
   arrange(desc(n)) %>% 
   slice(1:5)
+```
 
+```{r}
 # Which theses contain "fabric" in the top 20 most frequently used words?
 emu_theses_top_20 %>% 
   filter(word == "fabric")
