--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -94,6 +94,8 @@ pdf_paths <- here(data_path, emu_theses$file_name)
 ```{r}
 #| label: extract-pdf-text
 #| echo: false
+#| cache:true
+
 emu_theses$text <- convert_pdf_text(pdf_paths)
 ```
 
