--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -22,3 +22,15 @@
   isbn = {978-1-4919-8165-8},
   langid = {english}
 }
+
+@book{silge2017,
+	title = {Text Mining with R: A Tidy Approach},
+	author = {Silge, Julia and Robinson, David},
+	year = {2017},
+	month = {07},
+	date = {2017-07-18},
+	publisher = {O'Reilly Media},
+	edition = {1st edition},
+	address = {Beijing ; Boston},
+	langid = {English}
+}
