--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -266,45 +266,55 @@ emu_theses_top_20 %>%
 ```{r}
 #| label: ngrams
 
-# # wip function ngrams
-# get_ngrams <- function(df, n) {
-#   if (!is.numeric(n)) {
-#     stop("n is not numeric")
-#   }
-#   emu_theses %>%
-#     mutate(author = paste(first_name, last_name)) %>% 
-#     select(author, title, text, -c(year, first_name, last_name, text_start, text_end)) %>% 
-#     unnest_tokens(bigram, text, token = "ngrams", n = 2) %>% 
-#     separate(bigram, into = c("first","second"), sep = " ", remove = FALSE) %>%
-#     anti_join(stop_words, by = c("first" = "word")) %>%
-#     anti_join(stop_words, by = c("second" = "word")) %>%
-#     anti_join(stop_words_custom, by = c("first" = "word")) %>%
-#     anti_join(stop_words_custom, by = c("second" = "word")) %>%
-#     filter(str_detect(first, "[a-z]") & str_detect(second, "[a-z]")) %>% 
-#     filter(first != second) %>% 
-#     filter(first != "source")
-# }
-# emu_theses_ngrams <- get_ngrams(emu_theses, 2)
+## TO DO: generalise bigrams and trigrams into an ngrams function
 
 ## Bigrams
 emu_theses_bigrams <- emu_theses |> 
-  unnest_tokens(bigram, text, token = "ngrams", n = 2)
-
-emu_theses_bigrams_separated <- emu_theses_bigrams |>  
-  separate(bigram, into = c("first","second"), sep = " ", remove = FALSE) 
-
-emu_theses_bigrams_filtered <- emu_theses_bigrams_separated |> 
+  unnest_tokens(bigram, text, token = "ngrams", n = 2) |> 
+  separate(bigram, into = c("first", "second"), sep = " ", remove = FALSE) |> 
   anti_join(stop_words, by = c("first" = "word")) |> 
-  anti_join(stop_words, by = c("second" = "word"))
+  anti_join(stop_words, by = c("second" = "word")) |> 
+  filter(str_detect(first, "[a-z]") & 
+         str_detect(second, "[a-z]"))
 
-bigram_counts <- emu_theses_bigrams_filtered |> 
+bigram_counts <- emu_theses_bigrams |> 
   count(first, second, sort = TRUE)
 
 bigram_counts
 
-  # # filter(str_detect(first, "[a-z]") & str_detect(second, "[a-z]")) %>% 
-  # filter(first != second) %>% 
-  # filter(first != "source")
+## Trigrams
+emu_theses_trigrams <- emu_theses |> 
+  unnest_tokens(trigram, text, token = "ngrams", n = 3) |> 
+  separate(trigram, into = c("first", "second", "third"), sep = " ", remove = FALSE) |> 
+  filter(!first %in% stop_words$word,
+         !second %in% stop_words$word,
+         !third %in% stop_words$word) |>  
+  filter(str_detect(first, "[a-z]"), 
+         str_detect(second, "[a-z]"),
+         str_detect(third, "[a-z]"))
+
+trigram_counts <- emu_theses_trigrams |> 
+  count(first, second, sort = TRUE)
+
+trigram_counts
+
+# Bigram tf-idf
+bigram_tf_idf <- emu_theses_bigrams |> 
+  count(title, bigram) |> 
+  bind_tf_idf(bigram, title, n) |> 
+  arrange(desc(tf_idf))
+
+bigram_tf_idf
+
+# Trigram tf-idf
+trigram_tf_idf <- emu_theses_trigrams |> 
+  count(title, trigram) |> 
+  bind_tf_idf(trigram, title, n) |> 
+  arrange(desc(tf_idf))
+
+trigram_tf_idf
+
+
 
 emu_theses_bigrams_top <- emu_theses_bigrams %>%
   group_by(title) %>%
