--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -266,7 +266,7 @@ emu_theses_top_20 %>%
 ```{r}
 #| label: ngrams
 
-## TO DO: generalise bigrams and trigrams into an ngrams function
+## TO DO: generalise bigrams and trigrams into ngrams function
 
 ## Bigrams
 emu_theses_bigrams <- emu_theses |> 
@@ -316,13 +316,27 @@ trigram_tf_idf
 
 ## Show network of bigrams
 bigram_graph <- bigram_counts |> 
-  filter(n > 20) |> 
-  igraph::graph_from_data_frame()
+  filter(n > 100) |> 
+  graph_from_data_frame()
+
+bigram_graph
+
+set.seed(2023)
+
+a <- grid::arrow(type = "closed", length = unit(.15, "inches"))
+  
+ggraph(bigram_graph, layout = "fr") +
+  geom_edge_link(aes(edge_alpha = n), show.legend = FALSE, arrow = a) +
+  geom_node_point(color = "lightblue", size = 5) +
+  geom_node_text(aes(label = name), vjust = 1, hjust = 1) +
+  theme_void()
+
+## Higgh frequency bigrams ----
 
 emu_theses_bigrams_top <- emu_theses_bigrams %>%
   group_by(title) %>%
   count(bigram, sort = TRUE) %>%
-  slice_max(n, n = 10) %>%        ### top_n is superseded; better use slice_max instead
+  slice_max(n, n = 20) %>%        ### top_n is superseded; better use slice_max instead
   # filter(n > 50)                ### filter words with a minimum count
   ungroup() %>% 
   mutate(bigram = reorder(bigram, n))
@@ -334,6 +348,7 @@ emu_theses_bigrams_top_all <- emu_theses_bigrams %>%
   mutate(bigram = reorder(bigram, n))
 
 emu_theses_bigrams_top %>%
+  filter(title == unique(title)[1:6]) |> 
   ggplot(aes(x = bigram, y = n, fill = title)) +
   geom_col() +
   xlab(NULL) +
@@ -342,15 +357,8 @@ emu_theses_bigrams_top %>%
        x = "Unique words",
        title = "Count of unique words found in thesis",
        subtitle = "Stop words were removed from the list") +
-  facet_wrap( ~ title, scales = "free", ncol = 2)
-
-# find the most frequently used bigrams
-emu_thesis_bigrams_top <- emu_theses_bigrams %>%
-  group_by(title) %>% 
-  count(bigram, sort = TRUE) %>%
-  slice_max(n, n = 10) %>%                   ### change the number of top words to show
-  mutate(bigram = reorder(bigram, n)) %>% 
-  print()
+  facet_wrap( ~ title, scales = "free", ncol = 2) +
+  theme(legend.position = "none") 
 ```
 
 # Discussion
