--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -229,6 +229,56 @@ emu_theses_words %>%
 
 Similar to topic clustering on numeric data, topic modeling is a method of unsupervised classification of topics found in a group of documents [@silge2017].
 
+```{r}
+emu_theses_dtm <- emu_theses_words |> 
+  count(title, word, sort = TRUE) |> 
+  cast_dtm(title, word, n)
+
+emu_theses_dtm
+
+emu_theses_lda <- LDA(emu_theses_dtm, k = 2, control = list(seed = 2023))
+emu_theses_lda
+
+emu_theses_topics <- tidy(emu_theses_lda, matrix = "beta")
+emu_theses_topics
+
+# The top 10 words that are the most coomon in each topic
+emu_theses_top_terms <- emu_theses_topics |> 
+  group_by(topic) |> 
+  top_n(10, beta) |> 
+  ungroup() |> 
+  arrange(topic, -beta)
+
+emu_theses_top_terms |> 
+  mutate(term = reorder(term, beta)) |> 
+  ggplot(aes(term, beta, fill = factor(topic))) +
+  geom_col(show.legend = FALSE) +
+  facet_wrap(~ topic, scales = "free") +
+  coord_flip()
+
+# 
+beta_spread <- emu_theses_topics |> 
+  mutate(topic = paste0("topic", topic)) |> 
+  spread(topic, beta) |> 
+  filter(topic1 > 0.001, topic2 > .001) |> 
+  mutate(log_ratio = log2(topic2/topic1))
+
+beta_spread
+
+beta_spread %>%
+  group_by(direction = log_ratio > 0) %>%
+  slice_max(abs(log_ratio), n = 10) %>% 
+  ungroup() %>%
+  mutate(term = reorder(term, log_ratio)) %>%
+  ggplot(aes(log_ratio, term)) +
+  geom_col() +
+  labs(x = "Log2 ratio of beta in topic 2 / topic 1", y = NULL)
+
+emu_theses_documents <- tidy(emu_theses_lda, matrix = "gamma")
+emu_theses_documents
+```
+
+
 # Results
 
 ```{r}
