--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -227,18 +227,22 @@ emu_theses_words %>%
 
 ## Topic model
 
-Similar to topic clustering on numeric data, topic modeling is a method of unsupervised classification of topics found in a group of documents [@silge2017].
+Similar to clustering on numeric data, topic modeling is a method of unsupervised classification of topics found in a group of documents [@silge2017].
 
 ```{r}
+# The topicmodels package requires a document-term matrix as input
 emu_theses_dtm <- emu_theses_words |> 
   count(title, word, sort = TRUE) |> 
   cast_dtm(title, word, n)
 
 emu_theses_dtm
 
+# We will use the Latent Dirichlet Allocation (LDA) algorithm for topic modeling
+# In LDA, each document is a mixture of topics and each topic is a mixture of words
 emu_theses_lda <- LDA(emu_theses_dtm, k = 2, control = list(seed = 2023))
 emu_theses_lda
 
+# 
 emu_theses_topics <- tidy(emu_theses_lda, matrix = "beta")
 emu_theses_topics
 
