Add locaiton as argument to geocode function

--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -160,7 +160,7 @@ A total number of `r nrow(emu_theses)` were analysed.
 #| fig-cap: "Location of EMU theses included in the analysis"
 
 # Add latitude and longitude information to theses data frame
-emu_theses <- geocode_thesis_locations(emu_theses)
+emu_theses <- geocode_thesis_locations(emu_theses, "location")
 
 # Show thesis locations on world map
 visualize_thesis_locations(emu_theses)
