--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -160,7 +160,14 @@ A total number of `r nrow(emu_theses)` were analysed.
 #| fig-cap: "Location of EMU theses included in the analysis"
 
 # Add latitude and longitude information to theses data frame
-emu_theses <- geocode_thesis_locations(emu_theses, "location")
+emu_theses <- geocode_thesis_locations(emu_theses, location = NULL)
+
+ geocoded_data <- tidygeocoder::geocode(emu_theses,
+      address = location,
+      method = 'osm',
+      lat = latitude ,
+      long = longitude
+ )
 
 # Show thesis locations on world map
 visualize_thesis_locations(emu_theses)
