Update geocode functions

--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -162,12 +162,13 @@ A total number of `r nrow(emu_theses)` were analysed.
 # Add latitude and longitude information to theses data frame
 emu_theses <- geocode_thesis_locations(emu_theses, location = NULL)
 
- geocoded_data <- tidygeocoder::geocode(emu_theses,
-      address = location,
-      method = 'osm',
-      lat = latitude ,
-      long = longitude
- )
+# emu_theses <- tidygeocoder::geocode(
+#   emu_theses,
+#   address = location,
+#   method = 'osm',
+#   lat = latitude ,
+#   long = longitude
+# )
 
 # Show thesis locations on world map
 visualize_thesis_locations(emu_theses)
